LE MOTEUR DE JEU MARCHE!!!! AHHHHHH!!!!

--- a/core/controller/controls.cfg
+++ b/core/controller/controls.cfg
@@ -15,16 +15,16 @@
 # combinaisons de clés qui effectuent la même action.
 
 # En appuyant sur 'w', j'effectue l'action 'walk_forward'
-KEY_W walk_forward
+w walk_forward
 
-# En appuyant sur 'w', j'effectue l'action 'walk_forward'
-KEY_A walk_left
+# En appuyant sur 'a', j'effectue l'action 'walk_left'
+a walk_left
 
-# En appuyant sur 'w', j'effectue l'action 'walk_forward'
-KEY_S walk_backward
+# En appuyant sur 's', j'effectue l'action 'walk_backward'
+s walk_backward
 
-# En appuyant sur 'w', j'effectue l'action 'walk_forward'
-KEY_D walk_right
+# En appuyant sur 'd', j'effectue l'action 'walk_right'
+d walk_right
 
-# En appuyant sur 'shift + q', j'effectue l'action 'quit_game'
-MOD_SHIFT/KEY_Q quit_game
+# En appuyant sur 'q + !', j'effectue l'action 'quit_game'
+q/! quit_game
