Cleanup de main.py et ajout de commandes pour controller la camera

--- a/core/controller/controls.cfg
+++ b/core/controller/controls.cfg
@@ -26,5 +26,11 @@ s walk_backward
 # En appuyant sur 'd', j'effectue l'action 'walk_right'
 d walk_right
 
+# En appuyant sur 'espace', j'effectue l'action 'go_up'
+space go_up
+
+# En appuyant sur 'shift', j'effectue l'action 'go_down'
+left_shift go_down 
+
 # En appuyant sur 'q + !', j'effectue l'action 'quit_game'
 q/! quit_game
