Clean le code et ajout de documentation

--- a/core/controller/controls.cfg
+++ b/core/controller/controls.cfg
@@ -15,10 +15,10 @@
 # combinaisons de clés qui effectuent la même action.
 
 # En appuyant sur 'w', j'effectue l'action 'walk_forward'
-w walk_forward
+z walk_forward
 
 # En appuyant sur 'a', j'effectue l'action 'walk_left'
-a walk_left
+q walk_left
 
 # En appuyant sur 's', j'effectue l'action 'walk_backward'
 s walk_backward
