Plusieurs textures simultanées maintenant possible

--- a/core/controller/controls.cfg
+++ b/core/controller/controls.cfg
@@ -34,3 +34,6 @@ left_shift go_down
 
 # En appuyant sur 'q + !', j'effectue l'action 'quit_game'
 q/! quit_game
+
+# En appuyant sur 'r', j'effectue l'action 'reset'
+r reset
