Force de viscosité ajoutée

--- a/core/controller/controls.cfg
+++ b/core/controller/controls.cfg
@@ -37,3 +37,6 @@ q/! quit_game
 
 # En appuyant sur 'r', j'effectue l'action 'reset'
 r reset
+
+# En appuyant sur 'clique gauche', j'effectue l'action 'click'
+mouse_left click
